--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,12 +7,18 @@ html, body {
   height: 100%;
 }
 
-body {
-  margin: 0;
-}
-
 * {
   font-family: IRANSans, serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  font-family: 'Roboto', sans-serif;
+  background: #f4f7fa;
+  margin: 0;
 }
 
 a, a:hover, a:focus, a:active {
