--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~jqwidgets-ng/jqwidgets/styles/jqx.base.css";
+//@import "~jqwidgets-ng/jqwidgets/styles/jqx.base.css";
+@import "~primeng/resources/themes/lara-light-blue/theme.css";
+@import "~primeng/resources/primeng.css";
+@import "~primeicons/primeicons.css";
 
 @import "assets/fonts/font.css";
 
