--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -1,4 +1,6 @@
-<div class="">
+<div class="mt-5">
   <form [formGroup]="loginForm">
+    <app-husha-input-text label="نام کاربری" formControlName="username"></app-husha-input-text>
+    <app-husha-input-password label="نام کاربری" formControlName="password"></app-husha-input-password>
   </form>
 </div>
