--- a/src/app/ui-kits/husha-input-password/husha-input-password.component.html
+++ b/src/app/ui-kits/husha-input-password/husha-input-password.component.html
@@ -1,13 +1,13 @@
-<div class="flex flex-column gap-2">
-  <label>{{label}}</label>
+<div class="flex flex-column gap-2 w-100" [ngClass]="class">
+  <label class="mb-2">{{label}}</label>
   <p-password
-    type="text"
     #input
     [toggleMask]="true"
     [feedback]="false"
     [(ngModel)]="value"
     [disabled]="isDisabled"
     [ngClass]="{'ng-invalid ng-dirty' : control.invalid &&( control.dirty || control.touched)}"
+    [inputStyle]="{'width':'100%'}"
     [style]="{'width':'100%'}"
     (input)="onChanged($event)"
     (blur)="touched()"
