--- a/src/app/ui-kits/husha-input-text/husha-input-text.component.html
+++ b/src/app/ui-kits/husha-input-text/husha-input-text.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-column gap-2">
-  <label>{{label}}</label>
+<div class="flex flex-column gap-2 w-100" [ngClass]="class">
+  <label class="mb-2">{{label}}</label>
   <input
     type="text"
     #input
