bug fix in p-password

--- a/src/app/ui-kits/husha-input-password/husha-input-password.component.html
+++ b/src/app/ui-kits/husha-input-password/husha-input-password.component.html
@@ -10,7 +10,7 @@
     [inputStyle]="{'width':'100%'}"
     [style]="{'width':'100%'}"
     (input)="onChanged($event)"
-    (blur)="touched()"
+    (onBlur)="touched()"
   ></p-password>
   <app-husha-field-error [formField]="control"></app-husha-field-error>
 </div>
