remove unused file

--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -6,11 +6,11 @@
         label="نام کاربری"
         formControlName="username"
       ></app-husha-input-text>
-      <app-husha-input-password
+      <app-husha-multi-select
         class="mb-4"
         label="رمز عبور"
         formControlName="password"
-      ></app-husha-input-password>
+      ></app-husha-multi-select>
       <app-husha-button
         [disabled]="loginForm.invalid"
         label="ورود"
