--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
-  <p-card>
+  <app-husha-card>
     <form [formGroup]="loginForm" (ngSubmit)="handLogin()">
       <app-husha-input-text
         class="mb-3"
         label="نام کاربری"
         formControlName="username"
       ></app-husha-input-text>
-      <app-husha-multi-select
+      <app-husha-input-password
         class="mb-4"
         label="رمز عبور"
         formControlName="password"
-      ></app-husha-multi-select>
+      ></app-husha-input-password>
       <app-husha-button
         [disabled]="loginForm.invalid"
         label="ورود"
       ></app-husha-button>
     </form>
-  </p-card>
+  </app-husha-card>
 </div>
