--- a/src/app/components/dashboard/header/header.component.scss
+++ b/src/app/components/dashboard/header/header.component.scss
@@ -4,7 +4,7 @@
   z-index: 1;
   transition: all .5s ease;
   background: #f4f7fa;
-  padding: 1rem 1.5rem 0 1.5rem;
+  //padding: 1rem 1.5rem 0 1.5rem;
   position: fixed;
   top: 0;
 
@@ -20,7 +20,7 @@
 
   .head-content {
     background: #fff;
-    border-radius: 0.625rem;
+    //border-radius: 0.625rem;
     box-shadow: 0px 0px 10px 0 rgba(34 41 47 / 10%);
     padding: 0.813rem 1.563rem;
     display: flex;
