--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,10 @@ a, a:hover, a:focus, a:active {
 }
 
 ul, li {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.uikit-wrapper-height {
+  height: 92px;
 }
