--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,9 @@ ul, li {
 .uikit-wrapper-height {
   height: 92px;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
