--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -2,27 +2,16 @@
   <app-husha-card [ngClass]="'col-3'">
     <form [formGroup]="loginForm" (ngSubmit)="handLogin()">
       <app-husha-input-text
-        class="mb-3"
         label="نام کاربری"
         formControlName="username"
       ></app-husha-input-text>
       <app-husha-input-password
-        class="mb-4"
+        class="mb-2"
         label="رمز عبور"
         formControlName="password"
       ></app-husha-input-password>
 
-      <div class="d-flex flex-column">
-        <div class="d-flex align-items-center justify-content-between mb-4 captcha-container">
-          <input formControlName="captchaAnswer" class="col-2 text-center"/>
-          <div class="d-flex align-items-center justify-content-center flex-grow-1 captcha-image">
-            <img [src]="" alt="captcha"/>
-          </div>
-          <div class="d-flex pi-align-center justify-content-center">
-            <i class="pi pi-refresh text-center" (click)="handleFetchCaptcha()"></i>
-          </div>
-        </div>
-      </div>
+      <app-captcha></app-captcha>
 
       <app-husha-button
         [disabled]="loginForm.invalid"
