--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="d-flex align-items-center justify-content-center vh-100">
+  <app-husha-card [ngClass]="'col-3'">
+   <router-outlet></router-outlet>
+  </app-husha-card>
+</div>
