handle style font

--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -17,6 +17,6 @@
     label="ورود"
   ></app-husha-button>
 
-  <span routerLink="/auth/phone">رمز عبور خود را فراموش کرده اید ؟</span>
+  <span routerLink="/auth/phone" class="cursor-pointer text-primary font-sm-regular">رمز عبور خود را فراموش کرده اید ؟</span>
 
 </form>
