--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 //@import "~jqwidgets-ng/jqwidgets/styles/jqx.base.css";
 
-@import "assets/fonts/font.css";
+@import "assets/fonts/yekan/yekanbakh.css";
 @import "assets/scss/theme";
 @import "assets/scss/text-fonts";
 @import "scss/variabels";
@@ -11,7 +11,7 @@ html, body {
 }
 
 * {
-  font-family: IRANSans, serif;
+  font-family: yekanbakh, serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
