--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,10 +29,10 @@ a, a:hover, a:focus, a:active {
   color: inherit;
 }
 
-ul, li {
-  margin: 0 !important;
-  padding: 0 !important;
-}
+//ul, li {
+//  margin: 0 !important;
+//  padding: 0 !important;
+//}
 
 .cursor-pointer {
   cursor: pointer;
