--- a/src/app/components/dashboard/header/header.component.html
+++ b/src/app/components/dashboard/header/header.component.html
@@ -1,20 +1,10 @@
 <div class="head" [ngClass]="getHeaderClass()">
   <div class="head-content">
     <div class="head-content-right">
-
+      <app-my-customers></app-my-customers>
     </div>
     <div class="head-content-left">
-      <div class="head-menu">
-        <div class="head-menu-item">
-
-        </div>
-      </div>
-      <div class="head-user-avatar-container">
-        <div class="head-user-avatar">
-          <img src="assets/user3.jpg" alt="user" class="user-avatar">
-          <div class="circle-indicator pulse"></div>
-        </div>
-      </div>
+      <app-user-avatar></app-user-avatar>
     </div>
   </div>
 </div>
