--- a/src/app/components/tab-menu/tab-menu.component.scss
+++ b/src/app/components/tab-menu/tab-menu.component.scss
@@ -1,26 +1,23 @@
-.example-list {
-  width: 500px;
+.tabMenu-wrapper {
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
   display: block;
   background: white;
   border-radius: 4px;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .example-box {
   padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
+  border-left: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  cursor: move;
   background: white;
-  font-size: 14px;
 }
 
 .cdk-drag-preview {
