--- a/src/app/components/tab-menu/tab-menu.component.scss
+++ b/src/app/components/tab-menu/tab-menu.component.scss
@@ -1,4 +1,6 @@
-.tabMenu-wrapper {
+@import "src/scss/variabels";
+
+.tab-menu-wrapper {
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
@@ -8,7 +10,7 @@
   overflow: auto;
 }
 
-.example-box {
+.tab-menu-item {
   padding: 20px 10px;
   border-left: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
@@ -18,6 +20,11 @@
   justify-content: space-between;
   box-sizing: border-box;
   background: white;
+
+  i {
+    font-size: 0.5rem;
+    color: $color-1
+  }
 }
 
 .cdk-drag-preview {
