--- a/src/app/components/tab-menu/tab-menu.component.scss
+++ b/src/app/components/tab-menu/tab-menu.component.scss
@@ -8,24 +8,33 @@
   background: white;
   border-radius: 4px;
   overflow: auto;
-}
 
-.tab-menu-item {
-  padding: 20px 10px;
-  border-left: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  background: white;
+  .tab-menu-item {
+    padding: 20px 10px;
+    border-left: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    background: white;
 
-  i {
-    font-size: 0.5rem;
-    color: $color-1
+    &:has(.active) {
+      border-top: 2px solid $primary;
+
+      i {
+        font-size: 0.6rem;
+      }
+    }
+
+    i {
+      font-size: 0.5rem;
+      color: $color-1
+    }
   }
 }
+
 
 .cdk-drag-preview {
   box-sizing: border-box;
@@ -50,47 +59,52 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-ul{
+
+ul {
   list-style: none;
 }
 
-.contextMenu{
+.contextMenu {
   position: absolute;
-}
 
-.menu {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border-radius: 10px;
-  padding: 10px;
-  box-shadow: 0 10px 20px rgba(64 64 64 / 5%);
-  border: 1px solid $color-2;
-  width: 200px;
-}
+  .menu {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 10px 20px rgba(64 64 64 / 5%);
+    border: 1px solid $color-2;
+    width: 200px;
 
-.menu > li > a {
-  border: 0;
-  padding: 10px;
-  width: 100%;
-  cursor: pointer;
-  text-decoration: unset;
-  transition: 0.5s linear;
-  -webkit-transition: 0.5s linear;
-  -moz-transition: 0.5s linear;
-  -o-transition: 0.5s linear;
-}
+    li {
+      a {
+        border: 0;
+        padding: 10px;
+        width: 100%;
+        cursor: pointer;
+        text-decoration: unset;
+        //transition: 0.5s linear;
+        //-webkit-transition: 0.5s linear;
+        //-moz-transition: 0.5s linear;
+        //-o-transition: 0.5s linear;
 
-.menu > li > a:hover {
-  //background-color: #b1b3b6;
-  color: $primary;
-}
+        &:hover {
+          color: $primary;
+          font-weight: bold;
+        }
+      }
 
-.menu > li > a > i {
-  //padding-right: 10px;
+      i {
+        color: $color-1;
+        font-size: 0.5rem;
+      }
+    }
+  }
 }
 
 .menu > li.trash > a:hover {
   color: red;
 }
+
 
