--- a/src/app/components/my-customers/my-customers.component.html
+++ b/src/app/components/my-customers/my-customers.component.html
@@ -44,3 +44,6 @@
   ></app-husha-dropdown>
 
 </form>
+
+<!--<button #btn type="button" pButton icon="pi pi-bars" label="Show" (click)="menu.toggle($event)"></button>-->
+<!--<p-tieredMenu #menu [model]="items" [popup]="true" [autoZIndex]="true"></p-tieredMenu>-->
