--- a/src/app/components/tab-menu/tab-menu.component.scss
+++ b/src/app/components/tab-menu/tab-menu.component.scss
@@ -73,7 +73,8 @@ ul {
     background-color: white;
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 10px 20px rgba(64 64 64 / 5%);
+    //box-shadow: 0 10px 20px rgba(64 64 64 / 5%);
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
     border: 1px solid $color-2;
     width: 200px;
 
