--- a/src/app/components/my-customers/my-customers.component.html
+++ b/src/app/components/my-customers/my-customers.component.html
@@ -1,13 +1,4 @@
-<form dir="rtl" [formGroup]="myCustomersForm" class="d-flex align-items-center justify-content-between">
-  <app-husha-dropdown
-    *ngIf="childCustomers.length"
-    [ngStyle]="{'width':'170px'}"
-    class="me-2"
-    label="مشتریان من"
-    formControlName="childCustomers"
-    [options]="childCustomers"
-  ></app-husha-dropdown>
-
+<form [formGroup]="myCustomersForm" class="d-flex align-items-center justify-content-between">
 
   <app-husha-dropdown
     [ngStyle]="{'width':'170px'}"
