--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 //@import "~jqwidgets-ng/jqwidgets/styles/jqx.base.css";
 
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
 @import "assets/fonts/yekan/yekanbakh.css";
 @import "assets/scss/theme";
 @import "assets/scss/text-fonts";
