--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 //@import "~jqwidgets-ng/jqwidgets/styles/jqx.base.css";
 
+//primeng
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+
+//ag-grid
+@import 'ag-grid-community/styles/ag-grid.css';
+@import 'ag-grid-community/styles/ag-theme-alpine.css';
 
 @import "assets/fonts/yekan/yekanbakh.css";
 @import "assets/scss/theme";
