bug fix iin customers

--- a/src/app/components/my-customers/my-customers.component.html
+++ b/src/app/components/my-customers/my-customers.component.html
@@ -16,7 +16,7 @@
     (selectedMenu)="handleSelectService($event)">
     <div class="d-flex align-items-center justify-content-start me-3" (click)="serviceMenu.menu.toggle($event)">
       <i class="pi pi-cog me-2"></i>
-      <span class="text-1 font-sm-bold ">{{selectedService ? selectedService.label : 'انتخاب سرویس'}}</span>
+      <span class="text-1 font-sm-bold ">{{selectedService ? selectedService.title : 'انتخاب سرویس'}}</span>
     </div>
   </app-husha-menu>
 
