--- a/src/app/ui-kits/husha-grid/husha-grid.component.html
+++ b/src/app/ui-kits/husha-grid/husha-grid.component.html
@@ -1,6 +1,7 @@
 <ag-grid-angular
   style="width: 100%; height: 300px;"
   class="ag-theme-alpine"
+  [enableRtl]="true"
   [rowData]="rowData"
   [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef"
