add row click event

--- a/src/app/ui-kits/husha-grid/husha-grid.component.html
+++ b/src/app/ui-kits/husha-grid/husha-grid.component.html
@@ -5,4 +5,5 @@
   [rowData]="rowData"
   [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef"
+  (rowClicked)="handleRowClick($event)"
 ></ag-grid-angular>
