handle master details and multilevel

--- a/src/app/ui-kits/husha-grid/husha-grid.component.html
+++ b/src/app/ui-kits/husha-grid/husha-grid.component.html
@@ -1,9 +1,13 @@
 <ag-grid-angular
-  style="width: 100%; height: 300px;"
+  style="width: 100%;"
+  [style.height]="height"
   class="ag-theme-alpine"
+  [pagination]="true"
+  rowSelection="single"
   [enableRtl]="true"
   [rowData]="rowData"
   [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef"
-  (rowClicked)="handleRowClick($event)"
+  (rowClicked)="handleRowClicked($event)"
+  (paginationChanged)="handlePaginationChanged($event)"
 ></ag-grid-angular>
