--- a/src/app/components/crud-form/crud-form.component.html
+++ b/src/app/components/crud-form/crud-form.component.html
@@ -1,4 +1,14 @@
 <app-husha-grid
   [columnDefs]="columnDefs"
   [rowData]="rowData"
+  (rowClicked)="handleRowClicked($event)"
 ></app-husha-grid>
+
+
+
+<div class="mt-3" *ngIf="showDetailGrid">
+  <app-husha-grid
+    [columnDefs]="detailColumnDefs"
+    [rowData]="detailRowData"
+  ></app-husha-grid>
+</div>
