--- a/src/app/components/dashboard/sidenav/sidenav.component.scss
+++ b/src/app/components/dashboard/sidenav/sidenav.component.scss
@@ -105,7 +105,7 @@
         }
 
         .sidenav-link-text {
-          margin-right: 1.5rem;
+          //margin-right: 1.5rem;
         }
       }
 
@@ -151,7 +151,7 @@
       }
 
       .subLevel-link-text {
-        margin-right: 0.8rem;
+        //margin-right: 0.8rem;
       }
     }
   }
