--- a/src/app/pages/panel/pages/base-info/base-info.component.html
+++ b/src/app/pages/panel/pages/base-info/base-info.component.html
@@ -1,1 +1,13 @@
-<app-crud-form></app-crud-form>
+<app-husha-grid
+  [columnDefs]="columnDefs"
+  [rowData]="rowData"
+  (rowClicked)="handleRowClicked($event)"
+></app-husha-grid>
+
+<div class="mt-3" *ngIf="showDetailGrid">
+  <app-husha-grid
+    [columnDefs]="detailColumnDefs"
+    [rowData]="detailRowData"
+  ></app-husha-grid>
+</div>
+
