--- a/src/app/pages/auth/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/auth/pages/forget-password/forget-password.component.html
@@ -1,16 +1,16 @@
 <form [formGroup]="forgetPassword" (ngSubmit)="handleForgetPassword()">
-  <app-husha-input-password
+  <app-custom-input-password
     formControlName="password"
     label="رمز عبور"
-  ></app-husha-input-password>
-  <app-husha-input-password
+  ></app-custom-input-password>
+  <app-custom-input-password
     formControlName="confirmPassword"
     label="تکرار رمز عبور">
     <div *ngIf="forgetPassword.hasError('passwordMatch')" class="d-flex align-items-center font-xs-regular">
       <span class="text-forbidden">{{forgetPassword.getError('passwordMatch').message}}</span>
     </div>
-  </app-husha-input-password>
-  <app-husha-button
+  </app-custom-input-password>
+  <app-custom-button
     label="تغییر رمز عبور"
-  ></app-husha-button>
+  ></app-custom-button>
 </form>
