--- a/src/app/pages/auth/pages/otp/otp.component.html
+++ b/src/app/pages/auth/pages/otp/otp.component.html
@@ -22,8 +22,8 @@
   </ng-template>
 </div>
 
-<app-husha-button
+<app-custom-button
   label="تایید"
   [disabled]="otpControl.invalid"
   (click)="handleSubmitOtp()"
-></app-husha-button>
+></app-custom-button>
