--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <ngx-ui-loader></ngx-ui-loader>
-<app-husha-toast></app-husha-toast>
+<app-custom-toast></app-custom-toast>
 <router-outlet></router-outlet>
