--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-center justify-content-center vh-100">
+<div class="flex align-items-center justify-content-center h-screen w-full">
   <app-custom-card [ngClass]="'col-3'">
    <router-outlet></router-outlet>
   </app-custom-card>
