--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -2,6 +2,7 @@
   <app-custom-input-text
     label="نام کاربری"
     formControlName="username"
+    class="mb-2"
   ></app-custom-input-text>
   <app-custom-input-password
     class="mb-2"
