--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-//@import "~jqwidgets-ng/jqwidgets/styles/jqx.base.css";
 
 //primeng
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
 
 //ag-grid
 @import 'ag-grid-community/styles/ag-grid.css';
@@ -48,7 +48,7 @@ a, a:hover, a:focus, a:active {
 }
 
 .uikit-wrapper-height {
-  height: 95px;
+  height: 65px;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
