--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,11 @@ a, a:hover, a:focus, a:active {
   height: 65px;
 }
 
+.uikit-wrapper-textarea-height {
+  height: 150px;
+}
+
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
