--- a/src/app/components/dashboard/sidenav/sidenav.component.html
+++ b/src/app/components/dashboard/sidenav/sidenav.component.html
@@ -5,7 +5,7 @@
       <i class="fal fa-bars"></i>
     </button>
     <ng-container *ngIf="collapsed">
-      <div class="logo-text" @fadeInOut>Angular</div>
+      <div class="logo-text" @fadeInOut>HUSHA</div>
       <button class="btn-close" @rotate (click)="closeSidenav()">
         <i class="fal fa-times close-icon"></i>
       </button>
@@ -14,24 +14,24 @@
 
   <div class="scrollWrap scrollWrap_delayed">
     <ul class="sidenav-nav">
-      <li class="sidenav-nav-item" *ngFor="let data of navData">
-        <a *ngIf="data.items && data.items.length > 0"
-           class="sidenav-nav-link"
-           (click)="handleClick(data)"
+      <li class="sidenav-nav-item" *ngFor="let data of navData;let i = index" #sideNavItem>
+        <a class="sidenav-nav-link"
+           *ngIf="data.items && data.items.length > 0"
+           (click)="handleClick(data,i)"
            [ngClass]="getActiveClass(data)">
           <i class="sidenav-link-icon" [class]="data.icon"></i>
-          <span class="sidenav-link-text font-sm-regular" @fadeInOut *ngIf="collapsed">{{data.label}}</span>
+          <span class="sidenav-link-text" @fadeInOut *ngIf="collapsed">{{data.label}}</span>
           <i *ngIf="data.items && collapsed"
              [ngClass]="data.expanded ? 'fal fa-angle-down' :'fal fa-angle-left'"
              class="menu-collapsed-icon"
           ></i>
         </a>
         <a *ngIf="!data.items || (data.items && data.items.length === 0)"
-           class="sidenav-nav-link"
            [routerLink]="[data.routerLink]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
-           (click)="shrinkItems(data)">
+           (click)="shrinkItems(data,i)"
+           class="sidenav-nav-link">
           <i class="sidenav-link-icon" [class]="data.icon"></i>
-          <span class="sidenav-link-text font-sm-regular" @fadeInOut *ngIf="collapsed">{{data.label}}</span>
+          <span class="sidenav-link-text" @fadeInOut *ngIf="collapsed">{{data.label}}</span>
         </a>
         <div *ngIf="data.items && data.items.length > 0">
           <app-sub-level-menu
