--- a/src/app/components/dashboard/sidenav/sidenav.component.scss
+++ b/src/app/components/dashboard/sidenav/sidenav.component.scss
@@ -2,7 +2,7 @@
   background-color: #263238;
   transition: all .5s ease;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   width: 5rem;
   height: 100vh;
@@ -105,7 +105,7 @@
         }
 
         .sidenav-link-text {
-          //margin-right: 1.5rem;
+          margin-right: 1.5rem;
         }
       }
 
@@ -151,7 +151,7 @@
       }
 
       .subLevel-link-text {
-        //margin-right: 0.8rem;
+        margin-right: 0.8rem;
       }
     }
   }
