some changes in style

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ html, body {
 }
 
 body {
-  position: relative;
+  //position: relative;
   font-family: 'Roboto', sans-serif;
   background: #f4f7fa;
   margin: 0;
