--- a/src/app/components/my-customers/my-customers.component.html
+++ b/src/app/components/my-customers/my-customers.component.html
@@ -1,10 +1,10 @@
-<div class="d-flex justify-content-start">
+<div class="flex justify-content-start">
 
   <app-custom-menu
     [items]="customerMenuItems"
     (selectedMenu)="handleSelectCustomer($event)">
-    <div class="d-flex align-items-center justify-content-start me-3" (click)="customerMenu.menu.toggle($event)">
-      <i class="pi pi-user me-2"></i>
+    <div class="flex align-items-center justify-content-start ml-3" (click)="customerMenu.menu.toggle($event)">
+      <i class="pi pi-user ml-2"></i>
       <span class="text-1 font-sm-bold">{{selectedCustomer ? selectedCustomer.label : 'انتخاب مشتری'}}</span>
     </div>
   </app-custom-menu>
@@ -14,8 +14,8 @@
     #serviceMenu
     [items]="serviceMenuItems"
     (selectedMenu)="handleSelectService($event)">
-    <div class="d-flex align-items-center justify-content-start me-3" (click)="serviceMenu.menu.toggle($event)">
-      <i class="pi pi-cog me-2"></i>
+    <div class="flex align-items-center justify-content-start ml-3" (click)="serviceMenu.menu.toggle($event)">
+      <i class="pi pi-cog ml-2"></i>
       <span class="text-1 font-sm-bold ">{{selectedService ? selectedService.title : 'انتخاب سرویس'}}</span>
     </div>
   </app-custom-menu>
@@ -26,8 +26,8 @@
     #unitMenu
     [items]="unitMenuItems"
     (selectedMenu)="handleSelectUnit($event)">
-    <div class="d-flex align-items-center justify-content-start me-3" (click)="unitMenu.menu.toggle($event)">
-      <i class="pi pi-building me-2"></i>
+    <div class="flex align-items-center justify-content-start ml-3" (click)="unitMenu.menu.toggle($event)">
+      <i class="pi pi-building ml-2"></i>
       <span class="text-1 font-sm-bold ">{{selectedUnit ? selectedUnit.label : 'انتخاب مرکز'}}</span>
     </div>
   </app-custom-menu>
@@ -37,8 +37,8 @@
     #periodMenu
     [items]="periodMenuItems"
     (selectedMenu)="handleSelectPeriod($event)">
-    <div class="d-flex align-items-center justify-content-start" (click)="periodMenu.menu.toggle($event)">
-      <i class="pi pi-calendar me-2"></i>
+    <div class="flex align-items-center justify-content-start" (click)="periodMenu.menu.toggle($event)">
+      <i class="pi pi-calendar ml-2"></i>
       <span class="text-1 font-sm-bold ">{{selectedPeriod ? selectedPeriod.label : 'انتخاب دوره'}}</span>
     </div>
   </app-custom-menu>
