create file uploader

--- a/src/app/pages/ui-kit-list/ui-kit-list.component.html
+++ b/src/app/pages/ui-kit-list/ui-kit-list.component.html
@@ -13,4 +13,8 @@
     [dateIsGregorian]="true"
   ></app-custom-date-picker>
 
+  <app-custom-upload-file
+    formControlName="file"
+  ></app-custom-upload-file>
+
 </form>
