--- a/src/app/pages/panel/pages/base-info/base-info.component.html
+++ b/src/app/pages/panel/pages/base-info/base-info.component.html
@@ -11,6 +11,7 @@
 <!--  ></app-husha-grid>-->
 <!--</div>-->
 
+<app-grid-actions></app-grid-actions>
 <ag-grid-angular
   #grid
   style="width:100%;height: 300px"
