--- a/src/app/pages/panel/pages/base-info/base-info.component.html
+++ b/src/app/pages/panel/pages/base-info/base-info.component.html
@@ -29,6 +29,7 @@
 
 
 <div class="mt-3" *ngIf="showDetailGrid">
+  <app-grid-actions></app-grid-actions>
   <ag-grid-angular
     #detailGrid
     style="width:100%;height: 300px"
