--- a/src/app/pages/panel/pages/base-info/base-info.component.html
+++ b/src/app/pages/panel/pages/base-info/base-info.component.html
@@ -35,19 +35,24 @@
 ></ag-grid-angular>
 
 
-<div class="mt-3" *ngIf="showDetailGrid">
-  <app-grid-actions></app-grid-actions>
-  <ag-grid-angular
-    #detailGrid
-    style="width:100%;height: 300px"
-    class="ag-theme-alpine"
-    [enableRtl]="true"
-    [rowData]="rowData"
-    [columnDefs]="columnDefs"
-    [pagination]="true"
-    [paginationPageSize]="defaultPageSize"
-    [cacheBlockSize]="defaultPageSize"
-    [enableRangeSelection]="true"
-    [gridOptions]="gridOptions"
-  ></ag-grid-angular>
-</div>
+<ng-container #detailGridContainer></ng-container>
+
+<ng-template #detailGridTemp>
+  <div class="mt-3">
+    <app-grid-actions></app-grid-actions>
+    <ag-grid-angular
+      #detailGrid
+      style="width:100%;height: 300px"
+      class="ag-theme-alpine"
+      [enableRtl]="true"
+      [rowData]="rowData"
+      [columnDefs]="columnDefs"
+      [pagination]="true"
+      [paginationPageSize]="defaultPageSize"
+      [cacheBlockSize]="defaultPageSize"
+      [enableRangeSelection]="true"
+      [gridOptions]="gridOptions"
+    ></ag-grid-angular>
+  </div>
+</ng-template>
+
