--- a/src/app/pages/panel/pages/base-info/base-info.component.html
+++ b/src/app/pages/panel/pages/base-info/base-info.component.html
@@ -11,11 +11,10 @@
 <!--  ></app-husha-grid>-->
 <!--</div>-->
 
-
 <app-grid-actions
   #gridActions
   [gridHistory]="gridHistory"
-  (resetHistory)="gridHistory = []"
+  [form]="form"
   (clickHistory)="handleClickHistory($event)"
 ></app-grid-actions>
 
