--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -9,13 +9,24 @@
   </div>
 </form>
 
+<app-dynamic-form #dynamicForm [model]="model"></app-dynamic-form>
 
-<table>
-  <tbody>
-  <tr *ngFor="let i of excelData">
-    <td *ngFor="let cell of i">
-      {{cell}}
-    </td>
-  </tr>
-  </tbody>
-</table>
+<div class="flex flex-row-reverse mb-3">
+  <app-custom-button
+    (onclick)="handleClick()"
+    [disabled]="dynamicForm.dynamicFormGroup.invalid"
+    label="ارسال"
+    icon="pi pi-upload"
+  ></app-custom-button>
+</div>
+
+<ag-grid-angular
+  style="width:100%;height: 310px"
+  class="ag-theme-alpine"
+  [columnDefs]="columnDefs"
+  [rowData]="rowData"
+  [enableRtl]="true"
+  [gridOptions]="gridOptions"
+  [pagination]="true"
+  [paginationPageSize]="5"
+></ag-grid-angular>
