--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -3,7 +3,7 @@
   <div class="col-3">
     <app-custom-dropdown
       formControlName="sheets"
-      label="شیت ها"
+      label="شیت مورد نظر را انتخاب نمایید"
       [options]="sheetOptions"
     ></app-custom-dropdown>
   </div>
