--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -11,7 +11,7 @@
   </div>
 </form>
 
-<app-dynamic-form #dynamicForm [model]="model"></app-dynamic-form>
+<app-dynamic-form #dynamicForm [model]="[model]"></app-dynamic-form>
 
 <div class="flex flex-row-reverse mb-3">
   <app-custom-button
