--- a/src/app/pages/panel/pages/update/update.component.html
+++ b/src/app/pages/panel/pages/update/update.component.html
@@ -1,1 +1,6 @@
-<p>update works!</p>
+<ng-container #containerRef></ng-container>
+
+<ng-template #templateRef>
+  <app-dynamic-form [model]="model"></app-dynamic-form>
+</ng-template>
+
