--- a/src/app/pages/panel/pages/base-info/base-info.component.html
+++ b/src/app/pages/panel/pages/base-info/base-info.component.html
@@ -17,6 +17,7 @@
   [form]="form"
   [selectedRow]="selectedRow"
   (clickHistory)="handleClickHistory($event)"
+  (onDelete)="handleDelete($event)"
 ></app-grid-actions>
 
 <ag-grid-angular
@@ -42,7 +43,11 @@
 
 <ng-template #detailGridTemp>
   <div class="mt-3">
-    <app-grid-actions></app-grid-actions>
+    <app-grid-actions
+      [selectedRow]="selectedDetailRow"
+      [form]="form"
+      (onDelete)="handleDelete($event)"
+    ></app-grid-actions>
     <ag-grid-angular
       #detailGrid
       style="width:100%;height: 300px"
@@ -55,8 +60,8 @@
       [cacheBlockSize]="defaultPageSize"
       [enableRangeSelection]="true"
       [gridOptions]="gridOptions"
-      (rowClicked)="selectedRow = $event.data"
-      (paginationChanged)="selectedRow = null"
+      (rowClicked)="selectedDetailRow = $event.data"
+      (paginationChanged)="selectedDetailRow = null"
       [rowSelection]="'single'"
     ></ag-grid-angular>
   </div>
