--- a/src/app/pages/panel/pages/import/import.component.html
+++ b/src/app/pages/panel/pages/import/import.component.html
@@ -15,7 +15,7 @@
 
 <div class="flex flex-row-reverse mb-3">
   <app-custom-button
-    (onclick)="handleClick()"
+    (onClick)="handleClick()"
     [disabled]="dynamicForm.dynamicFormGroup.invalid"
     label="ارسال"
     icon="pi pi-upload"
